Fix missing space in markup tables, replace markup tables <code> with <pre> and add style "pre-wrap" (Test:SpacesInMarkups, reported by ChuckG)
git-svn-id: svn://pmwiki.org/pmwiki@3264 524c5546-5005-0410-9a3e-e25e191bd360

--- a/trunk/pub/skins/pmwiki-responsive/skin.css
+++ b/trunk/pub/skins/pmwiki-responsive/skin.css
@@ -437,6 +437,7 @@ td.middle, th.middle { vertical-align: middle;}
   td.markup1, td.markup2 { padding-left:10px; padding-right:10px; }
   table.vert td.markup1 { border-bottom:1px solid #ccf; }
   table.horiz td.markup1 { width:23em; border-right:1px solid #ccf; border-bottom:none; }
+  td.markup1 pre { white-space: pre-wrap; }
   
   div.faq p, div.faq pre { margin-left:40px; }
   div.faq p.question { margin:15px 0 12px 0; }
